mememomo css 수정

--- a/Memopad/style.css
+++ b/Memopad/style.css
@@ -1,19 +1,26 @@
 :root{
-    --normal: rgb(253, 202, 139);
+    --normal: rgb(255, 192, 115);
     --thick: rgb(255, 204, 138);
     --strong: rgb(235, 129, 0);
     --bgcolor: rgb(255, 245, 232);
 }
 
 @font-face {
-    font-family: 'KyoboHandwriting2021sjy';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KyoboHandwriting2021sjy.woff2') format('woff2');
+    font-family: 'KCCChassam';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/KCCChassam.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 
 body {
     background-color: #fdffe8c2;
+}
+
+body,
+button,
+input::placeholder,
+textarea::placeholder {
+    font-family: 'KCCChassam';
 }
 
 main {
@@ -25,7 +32,6 @@ main {
 
 h1 {
     color: var(--thick);
-    text-decoration: underline var(--normal);
     letter-spacing: 10px;
 }
 
@@ -95,7 +101,8 @@ button:active {
 
 #display {
     width: 308px;
-    color: var(--strong);
+    color: var(--thick);
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
